Bug 355222: don't attempt to close "blank" windows if the opener window is also closed, r=biesi, sr=darin